# stroke

./: AUTHORS  ChangeLog  Changelog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  config.h.in  configure  configure.ac
.github/workflows/: debian-build.yml
debian/: changelog  control  copyright  manpages  rules  watch
doc/: Makefile.am  Makefile.in
doc/man/: stroke.1
lib/: Makefile.am  Makefile.in
m4/: gnulib-comp.m4
src/: Makefile.am  Makefile.in  aux.c  errors.c  errors.h  stroke.c  stroke.h
src/gnulib/: gl-compat.h  parse-datetime.c  parse-datetime.h  stdckdint.h  timespec-extra.c  tz-compat.h
src/libgeneral/: Makefile.am  Makefile.in  args.h  debug.h  error.h  general.h  signals.h  stack.h
src/libgeneral/src/: args.c  debug.c  error.c  general.c  signals.c  stack.c
