#
# Makefile.am for libgeneral
# (C) 2009 by Soeren Wellhoefer <soeren.wellhoefer@gmx.net> under GPL
#

# Library
noinst_LIBRARIES = libgeneral.a

# Sources 
libgeneral_a_SOURCES = src/general.c src/args.c src/debug.c src/error.c src/signals.c src/stack.c general.h args.h debug.h error.h signals.h stack.h

# Preprocessor flags
AM_CPPFLAGS = $(EXTRA_FLAGS) -I.. -I$(top_srcdir)/src